--- a/src/components/home/Body/body.css
+++ b/src/components/home/Body/body.css
@@ -24,47 +24,52 @@
 
     height: 100vh;
     width: 100vw;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
+    
 }
 #Second_target
 {
     padding-left: 2rem;
-    padding-top: 15rem;
+    padding-top: 14rem;
     position:relative;
     top: 0;
     width: 50%;
     text-align: center;
     height: 100vh;
+    
     /* border: 2px solid red; */
 }
-#Second_target>h1
+.textone>h1
 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size:50px;
+    font-size:45px;
     font-weight: 700;
     color: rgb(11,71,165);   
      font-style: normal;
     line-height: 58.59px;
-    width:max-content;
+    text-align: left;
+    /* width:max-content; */
 }
-#Second_target>h2
+.texttwo>h2
 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size:20px;
     font-weight: 700;
     /* line-height: 23.44px; */
-    width: 90%;
-    padding-left: 10%;
-    text-align: center;
+
+    /* width: 90%; */
+
+    
+    text-align: left;
+}
+.box{
+     margin-left:15%;
 }
 #buttonAll {
     width: 24%;
     height: 2.4rem;
-    margin-left: 3%;
+    margin-left: 1%;
     /* font-size:large; */
     background-color: rgb(26, 99, 214);
     color: white;
@@ -94,6 +99,9 @@
 {
     font-size: small;
 }
+.box{
+    margin-left:0%;
+}
   
   }
 
@@ -115,10 +123,14 @@
 {
     font-size:1.5rem;
 }
+.box{
+    margin-left:0%;
+}
 
 #buttonAll
 {
     font-size: small;
+    
 }
   
   }
